--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
 <head>
-    <title>21 Savage Fan Site</title>
+    <title>Fave Songs</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 <div class="container">
 
     <div class="jumbotron text-center">
-        <h1>21 Savage Fan Site</h1>
-        <img src="img/savage21.jpg" alt="21 Savage Profile Photo">
+        <h1>Fav Songs</h1>
+       <h2>Login to join other music lovers</h2>
 
         <p>Login or Signup:</p>
 
@@ -22,4 +22,6 @@
 
 </div>
 </body>
+</html>
+
 </html>
