--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>21 Savage Fan Site</title>
+    <title>Fave Songs Sign-Up</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
 
     <% if (message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
-    <% } %>
+    <% } %> <!-- Not sure what this is doing?-->
 
     <!-- LOGIN FORM -->
     <form action="/signup" method="post">
@@ -22,10 +22,15 @@
             <label>Email</label>
             <input type="text" class="form-control" name="email">
         </div>
+        <!-- <div class="form-group">
+        <label>Username</label>
+            <input type="text" class="form-control" name="userName">
+        </div> -->
         <div class="form-group">
             <label>Password</label>
             <input type="password" class="form-control" name="password">
         </div>
+</div>
 
         <button type="submit" class="btn btn-warning btn-lg">Signup</button>
     </form>
